--- a/node-ejercicio-netflix/package.json
+++ b/node-ejercicio-netflix/package.json
@@ -6,7 +6,7 @@
   "main": "src/index.js",
   "scripts": {
     "start": "node src/index.js",
-    "dev": "node --watch src/index.js",
+    "dev": "nodemon src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -29,6 +29,8 @@
   "homepage": "https://github.com/Adalab/ejercicios-de-los-materiales#readme",
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.21.0"
+    "dotenv": "^17.2.0",
+    "express": "^4.21.0",
+    "mysql2": "^3.14.2"
   }
 }
